bk_ida/gccida/g1/count_spilled_pseudo
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/count_spilled_pseudo/src/reload1.c:2142:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v7 = ( ( unsigned int)( mode_class_0[*( ( unsigned __int8 *)cfun->emit->x_regno_reg_rtx[v4] + 2)] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/count_spilled_pseudo/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/count_spilled_pseudo/src/reload1.c:2173:36: error: use of undeclared identifier 'unk_9DF25C'
while ( v12 != ( int *)( ( char *)&unk_9DF25C + 4 * ( v11 - ( unsigned int)( v7 - 1))) ); 
                                   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/count_spilled_pseudo/src/obj/reload1.o] Error 1
